# social-links

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE.md  api.md  demo.md  index.md
docs/theme/overrides/: main.html
docs/theme/overrides/partials/: meta.html  title.html
sociallinks/: __init__.py  constants.py  core.py  exceptions.py  platforms.py  profiles.py
tests/: test_core.py  test_edge_cases.py  test_platform_management.py  test_platforms.py
