[project]
name = "social-links"
version = "1.1.0"
description = "A lightweight, zero-dependency Python library for detecting, validating, and sanitizing social media profile URLs. Supports 50+ platforms out of the box with automatic URL normalization, username extraction, and customizable regex patterns for extensibility."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "ysskrishna", email = "sivasaikrishnassk@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Text Processing :: Markup",
  "Topic :: Utilities"
]
keywords = [
    "apple_music",
    "bandcamp",
    "behance",
    "bluesky",
    "crunchbase",
    "detection",
    "dev_to",
    "discord",
    "douyin",
    "dribbble",
    "etsy",
    "exercism",
    "expression",
    "facebook",
    "flickr",
    "github",
    "gitlab",
    "gravatar",
    "gumroad",
    "hashnode",
    "hackernews",
    "instagram",
    "is-valid",
    "keybase",
    "kuaishou",
    "lemmy_world",
    "linkedin",
    "links",
    "linktree",
    "manipulation",
    "mastodon",
    "media",
    "medium",
    "normalize",
    "patreon",
    "pinterest",
    "platform",
    "producthunt",
    "profile",
    "quora",
    "reddit",
    "regex",
    "regexp",
    "regular",
    "regular expression",
    "sanitization",
    "sanitize",
    "signal",
    "slideshare",
    "snapchat",
    "social",
    "social-links",
    "social-media",
    "soundcloud",
    "spotify",
    "stackoverflow",
    "steam",
    "string",
    "substack",
    "telegram",
    "threads",
    "tiktok",
    "trim",
    "tumblr",
    "twitch",
    "twitter",
    "url",
    "url-parser",
    "validate",
    "validation",
    "vimeo",
    "vk",
    "wechat",
    "weibo",
    "wellfound",
    "whatsapp",
    "x",
    "youtube"
]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings>=0.26.1",
    "mkdocstrings-python>=1.11.1",
]


[project.urls]
Homepage = "https://github.com/ysskrishna/social-links"
Documentation = "https://ysskrishna.github.io/social-links/"
Repository = "https://github.com/ysskrishna/social-links.git"
Issues = "https://github.com/ysskrishna/social-links/issues"
Changelog = "https://github.com/ysskrishna/social-links/blob/main/CHANGELOG.md"
Discussions = "https://github.com/ysskrishna/social-links/discussions"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sociallinks"]

[tool.pytest.ini_options]
addopts = "--maxfail=1"

