[project]
name = "social-links"
version = "1.2.1"
description = "A lightweight, zero-dependency Python library for detecting, validating, and sanitizing social media profile URLs. Supports 50+ platforms out of the box with automatic URL normalization, username extraction, and customizable regex patterns for extensibility."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "ysskrishna", email = "sivasaikrishnassk@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Text Processing :: Markup",
  "Topic :: Utilities"
]
keywords = [
    "social-links",
    "python library",
    "social media links",
    "validate",
    "sanitize",
    "normalize",
    "detect",
    "url validation",
    "url parser",
    "regular expression",
    "regex",
    "linkedin",
    "github",
    "twitter",
    "x",
    "facebook",
    "instagram",
    "youtube",
    "behance",
    "dribbble",
    "medium",
    "reddit",
    "quora",
    "pinterest",
    "tiktok",
    "discord",
    "mastodon",
    "bluesky",
    "open source",
    "api reference",
    "contribution guide",
    "changelog",
    "version history",
    "mit license",
    "ysskrishna"
]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings>=0.26.1",
    "mkdocstrings-python>=1.11.1",
]


[project.urls]
Homepage = "https://github.com/ysskrishna/social-links"
Documentation = "https://ysskrishna.github.io/social-links/"
Repository = "https://github.com/ysskrishna/social-links.git"
Issues = "https://github.com/ysskrishna/social-links/issues"
Changelog = "https://github.com/ysskrishna/social-links/blob/main/CHANGELOG.md"
Discussions = "https://github.com/ysskrishna/social-links/discussions"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sociallinks"]

[tool.pytest.ini_options]
addopts = "--maxfail=1"

